--- a/inst/rmd/DIF-Effects-Report.Rmd
+++ b/inst/rmd/DIF-Effects-Report.Rmd
@@ -23,7 +23,7 @@ if(dataset.name != "dataset"){
 
 **Measure:** `r if(measure.name == "measure") outputs$item.name.range else paste0(measure.name,  " (", outputs$item.name.range, ")")`
 
-**Comparison groups:** `r paste(outputs$dif.group1, outputs$dif.group2, sep = " and ")`
+**Comparison groups:** `r if(length(outputs$dif.groups) == 2) paste(outputs$dif.groups, collapse = " and ") else paste(outputs$dif.groups, collapse = ", ")`
 
 **Items with no variance:** `r outputs$no.var.items`
 
@@ -35,13 +35,15 @@ if(dataset.name != "dataset"){
 
 **Type of DIF:** `r dif.type`
 
-```{r direction, results='asis'}
+```{r direction, results='asis', ft.align="left"}
 if(dif.type == "uniform"){
   if(n.biased > 0){
   
-  cat("* Number of items uniformly biased toward ", outputs$dif.group1, ": ", toward[[1]], sep = "")
+  cat("*Number of items uniformly biased toward each group*")
   cat("\n\n")
-  cat("* Number of items uniformly biased toward ", outputs$dif.group2, ": ", toward[[2]], sep = "")
+  toward.flex <- format_flex(toward)
+  cat(knitr::knit_print(toward.flex))
+  cat("\n\n")
   }
 }
 ```
