--- a/inst/rmd/DIF-Effects-Report.Rmd
+++ b/inst/rmd/DIF-Effects-Report.Rmd
@@ -87,49 +87,9 @@ if(nrow(biased.items.table) != 0){
 
 ```
 
-
-# Treatment Effect Robustness
-
-```{r bias.plots, results='asis', message=FALSE, fig.width = 5, fig.height = 6}
-
-gridExtra::grid.arrange(bias.plots[[1]], bias.plots[[2]])
-
-```
-
-"Bias Omitted" treatment effect estimates adjusted for bias in `r paste(names(inputs$item.data)[dif.models$biased.items], collapse = ", ")`.
-
-```{r Treatment_Effects, results='asis', warning=FALSE, ft.align="left", fig.width = 5, fig.height = 4}
-
-for(i in 1:length(effects.tables)){
-  cat("\n\n")
-  cat("##", names(effects.tables)[[i]])
-  cat("\n\n")
-  et.flex <- format_flex(effects.tables[[i]])
-  cat(knitr::knit_print(et.flex))
-  cat("\n\n")
-  cat("&nbsp;  ")
-  
-  print(effects.plots[[i]])
-  
-}
-```
-
-
 # DIF Detection Methods
 
 *Note.* Logical values in bias columns are based on p-values adjusted with the Benjamini & Hochberg (1995) method rather than directly on the p-value columns.
-
-```{r loess, results='asis', warning=FALSE, fig.width = 10, fig.height = ceiling(outputs$n.items / 6)*2 + 1}
-
-if(!is.null(dif.analysis$loess)){
-  cat("## Graphical Analysis via loess")
-  cat("\n\n")
-  
-  print(dif.analysis$loess$plot)
-  
-}
-```
-
 
 ```{r MH, results='asis', ft.align="left"}
 
@@ -151,8 +111,6 @@ if(!is.null(dif.analysis$MH)){
   }
 }
 ```
-
-
 
 
 ```{r Logistic Global, results='asis', ft.align="left"}
@@ -222,3 +180,46 @@ if(!is.null(dif.analysis$IRT)){
 }
 
 ```
+
+
+```{r loess, results='asis', warning=FALSE, fig.width = 10, fig.height = ceiling(outputs$n.items / 6)*2 + 1}
+
+if(!is.null(dif.analysis$loess)){
+  cat("## Graphical Analysis via loess")
+  cat("\n\n")
+  print(dif.analysis$loess$plot)
+  cat("\n\n")
+  cat("*Note.* Polytomous items are unit scaled when calculating the total or rest score. Thus, the maximum score is equal to the number of items.")
+  cat("\n\n")
+}
+```
+
+
+# Treatment Effect Robustness
+
+```{r bias.plots, results='asis', message=FALSE, fig.width = 5, fig.height = 6}
+
+gridExtra::grid.arrange(bias.plots[[1]], bias.plots[[2]])
+
+```
+
+
+```{r Treatment_Effects, results='asis', warning=FALSE, ft.align="left", fig.width = 5, fig.height = 4}
+
+for(i in 1:length(effects.tables)){
+  cat("\n\n")
+  cat("##", names(effects.tables)[[i]])
+  cat("\n\n")
+  cat("'Bias Omitted' treatment effect estimates adjusted for bias in", paste(names(inputs$item.data)[dif.models$biased.items], collapse = ", "), ".")
+  cat("\n\n")
+  et.flex <- format_flex(effects.tables[[i]])
+  cat("\n\n")
+  cat(knitr::knit_print(et.flex))
+  cat("\n\n")
+  cat("&nbsp;  ")
+  
+  print(effects.plots[[i]])
+  
+}
+```
+
