--- a/README.Rmd
+++ b/README.Rmd
@@ -10,28 +10,28 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # DIFreport
 
+**DIFreport is currently under construction. All information here is provisional and subject to change.**
+
 ## Summary
 
-Development of **DIFreport** was motivated by questions regarding the psychometric properties of early childhood development assessments used as outcome measures in impact evaluations. This package provides methods for (a) evaluating differential item functioning (DIF), (b) checking whether DIF leads to biased treatment effects on the unit-weighted total score or item response theory (IRT) based scoring methods, and (c) providing DIF-corrected treatment effects by either removing biased items (for the unit-weighted total score) or using an IRT models that adjusts for the item bias (for IRT-based scoring).
+Development of **DIFreport** was motivated by questions regarding the psychometric properties of early childhood development assessments used as outcome measures in impact evaluations. This package provides methods for (a) evaluating differential item functioning (DIF), (b) checking whether DIF leads to biased standardized mean difference estimates on the unit-weighted total score or item response theory (IRT) based scoring methods, and (c) providing DIF-corrected estimates by either removing biased items or using an IRT models that adjust for DIF.
 
 ### Methods
 
-The methods for evaluating DIF include semi-parametric regression (LOESS), the Mantel-Haenszel test, logistic regression, and multi-group IRT.  
+The methods for evaluating DIF currently include semi-parametric regression (LOESS), the Mantel-Haenszel test, logistic regression, and multigroup IRT.  
 
-DIF can be evaluated with respect to a treatment variable or with respect to pre-treatment variables used to examine treatment heterogeneity (e.g., gender, age, and socio-economic status). The **DIFreport** documentation refers to these as unconditional and conditional treatment effects, respectively.
-
-If assessment items have DIF with respect to treatment, the unconditional treatment effect *may* be biased. The intuitive interpretation here is that the treatment effect varies over the assessment items, so reporting the treatment effect on an aggregate score (e.g., the unit-weighted total score) may not reflect "true" effect on the construct of interest. 
-
-If the assessment items have DIF with respect to a conditioning variable (e.g., gender), the corresponding conditional treatment effects (e.g., the effect just for males, just for females, or their difference) *may* be biased. In other words, randomization of treatment does not protect conditional treatment effects from DIF with respect to the conditioning variable. 
+When evaluating the impact of DIF, standardized mean differences can be estimated with respect to the primary grouping variable (e.g., gender, age, and socio-economic status) as well as with respect to a conditioning variable (e.g., intervention condition) The **DIFreport** documentation refers to these as unconditional and conditional standardized mean differneces, respectively.
 
 ### Workflows
 
-**DIFreport** provides two general workflows, both of which are illustrated below. In the "[basic](#basic)" workflow, `summary_report()` is an omnibus function that automates the DIF analysis and, if there is any DIF detected, computes the treatment effects with and without adjusting for DIF. The results are summarized in an `rmarkdown` produced report. 
+**DIFreport** provides two general workflows, both of which are illustrated below. In the "[basic](#basic)" workflow, `summary_report()` is an omnibus function that automates the DIF analysis and, if there is any DIF detected, computes the standardized mean differences with and without adjusting for DIF. The results are summarized in an `rmarkdown` produced report. 
 
-In the "[advanced](#advanced)" workflow, the steps automated by `summary_report()` can be implemented directly, which gives more control over which DIF analyses are conducted and which items are identified as biased. The advanced workflow is currently under construction, as the output returned by most functions is not very user-friendly. In the future, these outputs may be converted to S3 or S4 objects with methods (e.g., print, summary) to provide greater utility. 
+In the "[advanced](#advanced)" workflow, the steps automated by `summary_report()` can be implemented directly, which gives more control over which DIF analyses are conducted and which items are identified as biased.
+
+The both workflows are currently under construction, but particularly the advanced workflow as the output returned by some functions are not very user-friendly. These outputs may be converted to S3 or S4 objects with methods (e.g., print, summary) to provide greater utility. 
 
 
-**DIFreport** is in the alpha stage of development. Please report any bugs or suggestions by opening a [Github issue](https://github.com/knickodem/WBdif/issues).
+**DIFreport** is in the alpha stage of development. Please report any bugs or suggestions by opening a [Github issue](https://github.com/knickodem/DIFreport/issues).
 
 ## Installation
 
@@ -45,8 +45,6 @@ library(DIFreport)
 
 ## Dataset
 
-PROVIDE BRIEF DESCRIPTION
-
 Neuman, M.,  Ozler, B., & Fernald, L. (2013). *Protecting early childhood development in Malawi impact evaluation survey 2013, midline*. World Bank. https://doi.org/10.48529/94zr-ww41
 
 
@@ -54,24 +52,24 @@ Neuman, M.,  Ozler, B., & Fernald, L. (2013). *Protecting early childhood develo
 
 The basic workflow requires only two functions: 
 
-* `dif_data_prep()` is a pre-processing step that organizes input information for use in other **DIFreport** functions and conducts some checks on the data to preemptively address potential downstream issues. Additionally, different reports require different data preps. 
+* `dif_prep()` is a pre-processing step that organizes input information for use in other **DIFreport** functions and conducts some checks on the data to preemptively address potential downstream issues. Additionally, different reports require different data preps. 
 
 * `summary_report()` is a wrapper around all of the other functions needed to run the analysis and produce the report. The function offers a variety of options to customize the both the analysis and reporting. For more details on each option see the [Advanced workflow](#advanced) section. Given the all-in-one nature of `summary_report()`, the code will usually take several minutes to run before producing the report.
 
-### Unconditional Treatment Effects
+### Unconditional Standardized Mean Differences
 
-If assessing DIF with respect to only the treatment variable is of interest, and evaluating robustness of the unconditional treatment effects, only `dif.group.id` need be supplied to `dif_data_prep()`. If different variables are provided to `dif.group.id` and `tx.group.id`, then conditional treatment effects are estimated (see [Conditional Treatment Effects](#conditional)). The function `summary_report()` recognizes how the data are prepared and estimates the appropriate treatment effects. 
+If assessing DIF with respect to only the grouping variable of interest, and evaluating robustness of the unconditional standardized mean differences, only `dif.group` need be supplied to `dif_prep()`. If `cond.group` is supplied, then conditional standardized mean differences are estimated (see [Conditional Standardized Mean Differences](#conditional)). The function `summary_report()` recognizes how the data are prepared and estimates the appropriate standardized mean differences. 
 
-The code below uses the built-in dataset "mdat" to generate [this report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/README Example Reports/DIF-Effects-Tx-MDAT-Language.html). 
+The code below uses the built-in dataset "mdat" to generate [this report](https://htmlpreview.github.io/?https://github.com/knickodem/DIFreport/blob/master/README Example Reports/DIF-Effects-Tx-MDAT-Language.html). 
 
 ```{r, eval = FALSE}
 # Load the example data (MDAT language assessment, collected in Malawi). 
 data("mdat")
 
-mdat_tx <- dif_data_prep(item.data = mdat[5:ncol(mdat)],
-                               dif.group.id = mdat$treated,
-                               cluster.id = mdat$clusterid,
-                               std.group = "Control", # "Control" is a value in mdat$treated
+mdat_tx <- dif_prep(item.data = mdat[5:ncol(mdat)],
+                               dif.groups = mdat$treated,
+                               cluster = mdat$cluster,
+                               ref.name = "Male", # "Male" is a value in mdat$gender
                                na.to.0 = TRUE)
 
 summary_report(dif.data = mdat_tx,
@@ -82,18 +80,18 @@ summary_report(dif.data = mdat_tx,
                dataset.name = "Malawi")
 ```
 
-### Conditional Treatment Effects {#conditional}
+### Conditional Standardized Mean Differences {#conditional}
 
-If assessing DIF with respect to a conditioning variable (e.g., gender) and evaluating robustness of the conditional treatment effects (e.g., for just females, for just males, and their difference) is of interest, then both `dif.group.id` and `tx.group.id`need to be supplied to `dif_data_prep()`.
+If assessing DIF with respect to a conditioning variable (e.g., treatment group) and evaluating robustness of the conditional standardized mean differences (e.g., for just girls, for just boys, and their difference) is of interest, then both `dif.groups` and `cond.groups`need to be supplied to `dif_prep()`.
 
-Below we specify both `dif.group.id` and a different `tx.group.id`. The code below generates [this report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/README Example Reports/DIF-Effects-Gender-MDAT-Language.html).
+The code below generates [this report](https://htmlpreview.github.io/?https://github.com/knickodem/DIFreport/blob/master/README Example Reports/DIF-Effects-Gender-MDAT-Language.html).
 
 ```{r, eval = FALSE}
-mdat_gender <- dif_data_prep(item.data = mdat[5:ncol(mdat)],
-                             dif.group.id = mdat$gender,
-                             tx.group.id = mdat$treated,
-                             cluster.id = mdat$clusterid,
-                             std.group = "Control") 
+mdat_gender <- dif_prep(item.data = mdat[5:ncol(mdat)],
+                             dif.groups = mdat$gender,
+                             cond.groups = mdat$treated,
+                             cluster = mdat$cluster,
+                             ref.name = "Male") 
 
 summary_report(dif.data = mdat_gender,
                file.name = "DIF-Effects-Gender-MDAT-Language",
@@ -107,50 +105,50 @@ summary_report(dif.data = mdat_gender,
 
 ## Advanced {#advanced}
 
-The advanced workflow shows what is going on under the hood of `summary_report()` and lets you have more control over which items are identified as biased in the report. In this section we work through the conditional treatment effect example in more detail. 
+The advanced workflow shows what is going on under the hood of `summary_report()` and lets you have more control over which items are identified as biased in the report. In this section we work through the conditional standardized mean difference example in more detail. 
 
-The first recommended step is still `dif_data_prep()`, which operates in the same manner as the [Basic workflow](#basic). This step is repeated below. 
+The first step is still `dif_prep()`, which operates in the same manner as the [Basic workflow](#basic). This step is repeated below. 
 
 
-```{r, message = FALSE, warning = FALSE}
-library(WBdif)
+```{r, message = FALSE, warning = FALSE, eval=FALSE}
+library(DIFreport)
 data("mdat")
 
-mdat_gender <- dif_data_prep(item.data = mdat[5:ncol(mdat)],
-                             dif.group.id = mdat$gender,
-                             tx.group.id = mdat$treated,
-                             cluster.id = mdat$clusterid,
-                             std.group = "Control") 
+mdat_gender <- dif_prep(item.data = mdat[5:ncol(mdat)],
+                             dif.groups = mdat$gender,
+                             cond.groups = mdat$treated,
+                             cluster = mdat$cluster,
+                             ref.name = "Male") 
 ```
 
 ### DIF Analysis
 
-The `dif_analysis()` function explores DIF with respect to the `dif.group.id` using various methods. The goal is to arrive at an overall picture of the data that does not depend on the assumptions of any one particular method. Four DIF methods are available for dichotomous data, but only semi-parametric regression and IRT can be used with multi-category ("polytomous") assessment items.  
+The `dif_analysis()` function explores DIF with respect to the `dif.groups` using various methods. The goal is to arrive at an overall picture of the data that does not depend on the assumptions of any one particular method. Currently, 4 DIF methods are available for dichotomous data, but only semi-parametric regression and IRT can be used with multi-category ("polytomous") assessment items.  
 
  - LOESS regression - Generates plot of response curves for the two groups on each item. DIF is determined through visual inspection of differences in the groups' response curves.
 
- - Mantel-Haenszel (MH) Test - *only available for dichotomous items* -  Biased items are identified by conducting a Mantel-Haenszel test (`stats::mantelhaen.test()`) for each item by `dif.group.id` table, stratified by either the unit-weighted total score (`match.type = "Total"`) or the unit-weighted total score computed after removing the item under investigation (`match.type = "Rest"`). Analysis proceeds in two stages, an initial "Purification" stage that tentatively identifies DIF-fy items, and a second "Refinement" stage which removes the tentatively-identified items from the matching variable. The results of the second stage are considered more definitive. One common problem that arises with the MH test is when there are empty cells in the stratified two-way tables. A common remedy is to bin the stratifying variable (e.g., by deciles), as shown in the code below. 
+ - Mantel-Haenszel (MH) Test - *currently only available for dichotomous items* -  Biased items are identified by conducting a Mantel-Haenszel test (`stats::mantelhaen.test()`) for each item by `dif.groups` table, stratified by either the unit-weighted total score (`match.type = "Total"`) or the unit-weighted total score computed after removing the item under investigation (`match.type = "Rest"`). Analysis proceeds in two stages, an initial "Purification" stage that tentatively identifies DIF items, and a second "Refinement" stage which removes the tentatively-identified items from the matching variable. The results of the second stage are considered more definitive. One common problem that arises with the MH test is when there are empty cells in the stratified two-way tables. A common remedy is to bin the stratifying variable (e.g., by deciles), as shown in the code below. 
  
- - Logistic regression - *only available for dichotomous items* - First conducts an omnibus test of DIF by comparing fit of no DIF, uniform DIF, and non-uniform DIF logistic regression models. If the model comparisons suggest DIF, biased items are identified by fitting two models for each item: one where all items parameters are held constant over groups, and one where the item in question interacts with `dif.group.id`. Depending on the type of DIF identified in the omnibus test, the intercept (uniform DIF) or the intercept and slope (non-uniform DIF) may be interacted with `dif.group.id`. The item-by-item testing uses the two-stage purification and refinement approach described in the MH Test.  
+ - Logistic regression - *only available for dichotomous items* - First conducts an omnibus test of DIF by comparing fit of no DIF, uniform DIF, and non-uniform DIF logistic regression models. If the model comparisons suggest DIF, biased items are identified by fitting two models for each item: one where all items parameters are held constant over groups, and one where the item in question interacts with `dif.groups`. Depending on the type of DIF identified in the omnibus test, the intercept (uniform DIF) or the intercept and slope (non-uniform DIF) may be interacted with `dif.groups`. The item-by-item testing uses the two-stage purification and refinement approach described in the MH Test.  
  
- - Item Response Theory (IRT) - First conducts an omnibus test of DIF by comparing the fit of no DIF, uniform DIF, and non-uniform DIF models via `mirt::multiGroup()`. If the model comparisons suggest DIF, biased items are identified in the same way as described for logistic regression, which is implemented using the `drop` scheme of `mirt::DIF()`, with the exception that the Refinement stage does not re-test any of items dropped in the Purification stage. The same functionality can be achieved with `mirt::DIF()` using the `drop_sequential` scheme with `max_run = 2`.
+ - Item Response Theory (IRT) - 
  
 Each method has its own low-level function (`dif_loess()`, `dif_mh()`, `dif_logistic()`, and `dif_irt()`), which are called by `dif_analysis()`. 
  
-```{r, message = FALSE, warning = FALSE, results='hide'}
+```{r, message = FALSE, warning = FALSE, results='hide', eval=FALSE}
 dif.analysis <- dif_analysis(dif.data = mdat_gender,
                             dif.methods =  c("loess", "MH", "logistic", "IRT"),
                             match.type = "Total",
-                            match.bins = seq(0, 1, by = .1)) # use deciles of matching var in MH
+                            match.bins = seq(0, 1, by = .1)) # use deciles of matching variable in MH
 ```
 
-```{r}
+```{r, eval=FALSE}
 # View the biased items reported by "MH", "logistic", or "IRT" methods
 options(knitr.kable.NA = '')
 knitr::kable(biased_items_table(dif.analysis))
 ```
 
-If the treatment effect estimates are not of interest, a report of the DIF analysis can be generated `dif_report()`. The report enables comparison of the DIF methods with one method highlighted via the `biased.items` argument ([example report](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/README Example Reports/DIF-Only-Gender-MDAT-Language.html)).
+If the standardized mean difference estimates are not of interest, a report of the DIF analysis can be generated `dif_report()`. The report enables comparison of the DIF methods with one method highlighted via the `biased.items` argument ([example report](https://htmlpreview.github.io/?https://github.com/knickodem/DIFreport/blob/master/README Example Reports/DIF-Only-Gender-MDAT-Language.html)).
 
 ```{r, message = FALSE, warning = FALSE, eval=FALSE}
 dif_report(dif.analysis = dif.analysis,
@@ -162,59 +160,30 @@ dif_report(dif.analysis = dif.analysis,
 ```
 
 
-### DIF Models
+### DIF Impact
 
-The function `dif_models()` estimates a "confirmatory" multigroup IRT model in which the parameters of user-specified items are allowed to vary over levels of `dif.group.id`. This model is used to generate the IRT-based scores for the assessment, which in turn are used to compute the treatment effects (see below). 
+The last step in this workflow is to estimate standardized mean differences, with and without adjustments for DIF. standardized mean differences and their standard errors are computed using the method described by Hedges (2007), which is applicable to cluster-randomized designs as well as simple random samples. 
 
-The user specifies biased items using the `biased.items` argument. This can be the name one of the DIF methods run by `dif_analysis()`, in which case any items identified by that method are treated as biased. Alternatively, the user can specify a custom list of biased items in terms of a numeric vector that indexes the columns of `item.data`. The basic workflow does not provide this user customizable functionality for identifying DIF-fy items. 
-
-In the example below, all items identified by any method of `dif_analysis()` are specified as biased. Some supporting graphics for `dif_models()` depict the test bias function. 
-
-```{r, results='hide'}
-biased.items <- Reduce(unique, extract_biased_items(dif.analysis))
-dif.models <- dif_models(dif.analysis = dif.analysis, biased.items = biased.items)
-```
-```{r}
-bias.plots <- bias_plots(dif.models)
-gridExtra::grid.arrange(bias.plots[[1]], bias.plots[[2]])
-```
-
-### Treatment Effect Estimation
-
-The last step in this workflow is to estimate standardized treatment effects, with and without adjustments for DIF. Treatment effects and their standard errors are computed using the method described by Hedges (2007), which is applicable to cluster-randomized designs as well as simple random samples. 
-
-Treatment effects and their standard errors are reported for four different outcome variables.
+Standardized Mean Differences and their standard errors are reported for four different outcome variables.
 
 * The unit-weighted total score computed with all items.
 
-* The unit-weighted total score computed with DIF-fy items omitted (i.e. the items identified in dif.models$biased.items).
+* The unit-weighted total score computed with DIF items omitted
 
-* IRT scores computed using a model that constrains all items to have equal parameters over levels of dif.group.id (ie., dif.models$no.dif.mod) .
+* IRT scores computed using a model that constrains all items to have equal parameters over levels of `dif.groups`.
 
-* IRT scores computed using a model that allows parameters of DIF-fy items to vary over levels of dif.group.id (ie., dif.models$dif.mod).
+* IRT scores computed using a model that allows parameters of DIF-fy items to vary over levels of `dif.groups`.
 
-The information supplied to `dif_data_prep()` (which is passed to `effect_robustness()` through `dif.models`) provides additional details about how the treatment effects are computed 
+The information supplied to `dif_prep()` (which is passed to `dif_impact()` through `dif.models`) provides additional details about how the standardized mean differences are computed 
 
 
-* Treatment effects are computed for `tx.group.id`. If `tx.group.id == dif.group.id` unconditional treatment effects are reported. Otherwise treatment effects are computed condition on `dif.group.id`. 
+* standardized mean differences are computed for `cond.groups`. If `cond.groups == dif.groups` unconditional standardized mean differences are reported. Otherwise standardized mean differences are computed condition on `dif.groups`. 
  
-* The standard deviation used to standardize the effect size is given by `std.group`
+* The standard deviation used to standardize the effect size is given by `ref.name` if supplied.
  
-* If `cluster.id` is provided, effect sizes and their standard errors are adjusted for a  multi-stage sampling design in which `cluster.id` is the primary sampling unit. 
+* If `cluster` is provided, effect sizes and their standard errors are adjusted for a multi-stage sampling design in which `cluster` is the primary sampling unit. 
  
-In our example, we will be examining treatment effects conditional on gender, using the control group to standardize the effects, and clustering based on the `clusterid` variable from the `mdat` data. Some supporting plots for Some support functions for `effects_robutness` tabulate the effects and provide forest plots  
-
-```{r, message = FALSE, warning = FALSE}
-effect.robustness <- effect_robustness(dif.models = dif.models, irt.scoring = "WLE")
-lapply(effect.robustness, effects_plot)
-
-effects.tables <- lapply(effect.robustness, effects_table)
-knitr::kable(effects.tables[[1]], digits = 2, caption = names(effects.tables)[[1]])
-knitr::kable(effects.tables[[2]], digits = 2, caption = names(effects.tables)[[2]])
-knitr::kable(effects.tables[[3]], digits = 2, caption = names(effects.tables)[[3]])
-```
-
-A report with just the robustness of treatment effect estimates to biased items, but no DIF analysis information, can be requested from `effect_report()`. More often, the DIF analysis results are also of interest, in which case use `dif_effect_report()` to include summaries of both the DIF analysis and the treatment effect robustness checks, such as the [report generated here](https://htmlpreview.github.io/?https://github.com/knickodem/WBdif/blob/master/README Example Reports/Logistic-Gender-MDAT-Language.html)
+A report with just the robustness of standardized mean difference estimates to biased items, but no DIF analysis information, can be requested from `effect_report()`. More often, the DIF analysis results are also of interest, in which case use `dif_effect_report()` to include summaries of both the DIF analysis and the standardized mean difference robustness checks, such as the [report generated here](https://htmlpreview.github.io/?https://github.com/knickodem/DIFreport/blob/master/README Example Reports/Logistic-Gender-MDAT-Language.html)
 
 ```{r, message = FALSE, warning = FALSE, eval=FALSE}
 dif_effect_report(dif.analysis = dif.analysis,
